use tonic::Request;

pub mod proto {
    tonic::include_proto!("proto");
}

use proto::core_manager_service_client::CoreManagerServiceClient;
use proto::{StartRequest, StopRequest, UserId};

#[tokio::main]
async fn main() -> Result<(), Box<dyn std::error::Error>> {
    // –ü–æ–¥–∫–ª—é—á–∞–µ–º—Å—è –∫ —Å–µ—Ä–≤–µ—Ä—É
    let mut client = CoreManagerServiceClient::connect("http://[::1]:50051").await?;

    println!("‚úÖ Connected to gRPC server");

    // 1. –ó–∞–ø—É—Å–∫–∞–µ–º core –¥–ª—è –ø–æ–ª—å–∑–æ–≤–∞—Ç–µ–ª—è
    let start_request = Request::new(StartRequest {
        user_id: 1,
        coins: vec!["BTCUSDT".to_string(), "ETHUSDT".to_string()],
    });

    let response = client.start_core(start_request).await?;
    let start_resp = response.into_inner();

    if start_resp.is_done {
        println!("‚úÖ Core {} started for user {}", start_resp.core_id, start_resp.user_id);
    } else {
        println!("‚ùå Failed to start core: {}", start_resp.error_message);
        return Ok(());
    }

    let core_id = start_resp.core_id;

    // 2. –ó–∞–ø—É—Å–∫–∞–µ–º stream –¥–ª—è –ø–æ–ª—É—á–µ–Ω–∏—è —Å–∏–≥–Ω–∞–ª–æ–≤
    let stream_request = Request::new(UserId { user_id: 1 });
    let mut stream = client.stream_signals(stream_request).await?.into_inner();

    println!("üì° Listening for signals...");

    // Spaw–Ω–∏–º –∑–∞–¥–∞—á—É –¥–ª—è —á—Ç–µ–Ω–∏—è —Å–∏–≥–Ω–∞–ª–æ–≤
    let stream_handle = tokio::spawn(async move {
        while let Some(signal) = stream.message().await.unwrap() {
            println!(
                "üìä Signal received: user={}, core={}, tactic={}, signal={}",
                signal.user_id, signal.core_id, signal.tactic_name, signal.tactic_signal
            );
        }
        println!("Stream ended");
    });

    // 3. –ñ–¥–µ–º –Ω–µ–º–Ω–æ–≥–æ (–≤ —Ä–µ–∞–ª—å–Ω–æ–º –ø—Ä–∏–ª–æ–∂–µ–Ω–∏–∏ —ç—Ç–æ –±—É–¥–µ—Ç –±–µ—Å–∫–æ–Ω–µ—á–Ω—ã–π —Ü–∏–∫–ª)
    tokio::time::sleep(tokio::time::Duration::from_secs(30)).await;

    // 4. –û—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º core
    let stop_request = Request::new(StopRequest {
        user_id: 1,
        core_id,
    });

    let response = client.stop_core(stop_request).await?;
    let stop_resp = response.into_inner();

    if stop_resp.is_done {
        println!("‚úÖ Core {} stopped", core_id);
    } else {
        println!("‚ùå Failed to stop core: {}", stop_resp.error_message);
    }

    // –ñ–¥–µ–º –∑–∞–≤–µ—Ä—à–µ–Ω–∏—è stream
    stream_handle.abort();

    Ok(())
}